# autoppl

./: .all-contributorsrc  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  _r_e_a_d_m_e_8md.html  activate_8hpp.html  activate_8hpp.js  activate_8hpp_source.html  ad__boost_2value_8hpp.html  ad__boost_2value_8hpp.js  ad__boost_2value_8hpp_source.html  annotated.html  annotated_dup.js  autocorrelation_8hpp.html  autocorrelation_8hpp.js  autocorrelation_8hpp_source.html  autoppl_8hpp.html  autoppl_8hpp_source.html  bar__eq_8hpp.html  bar__eq_8hpp.js  bar__eq_8hpp_source.html  base__mcmc_8hpp.html  base__mcmc_8hpp.js  base__mcmc_8hpp_source.html  bernoulli_8hpp.html  bernoulli_8hpp.js  bernoulli_8hpp_source.html  binary_8hpp.html  binary_8hpp.js  binary_8hpp_source.html  bounded_8hpp.html  bounded_8hpp.js  bounded_8hpp_source.html  bounded__inv__transform_8hpp.html  bounded__inv__transform_8hpp.js  bounded__inv__transform_8hpp_source.html  build_and_test.sh  (+624 more)
autoppl/: CMakeLists.txt  main.cpp
autoppl/include/: autoppl.h  autoppl.hpp
autoppl/src/: autoppl.cpp
benchmark/: CMakeLists.txt  benchmark_utils.hpp  life-clean.csv  mh_bayes_net.cpp  normal_two_prior_distribution.cpp  normal_two_prior_distribution.py  normal_two_prior_distribution_pymc3.py  normal_two_prior_distribution_stan.py  normal_two_prior_distribution_stan.stan  normal_wishart_prior.cpp  regression_autoppl.cpp  regression_autoppl_2.cpp  regression_pymc3.py  regression_stan.py  regression_stan.stan  regression_stan_2.py  regression_stan_2.stan  stochastic_volatility.cpp  stochastic_volatility_stan.py  stochastic_volatility_stan.stan
doc/design/: model_design2.cpp  model_inttest.cpp  model_size.cpp
doc/example/: normal_posterior_mean_stddev.cpp
docs/design/: README.md
docs/doxygen/: Doxyfile
docs/example/: CMakeLists.txt  chrono_error.cpp  normal_posterior_mean_stddev.cpp  sample_joint_dist.cpp  sample_std_normal.cpp
docs/figures/: ppl_flowchart.drawio
docs/figures/gaussian_benchmark_plot/: figplot.py
docs/figures/regression_benchmark_plot/: figplot.py
docs/ref/: normal-pymc3.py  normal-regression.nb  regression-pymc3.py  ridge-pymc3.py
example/: CMakeLists.txt  model_size.cpp  normal_posterior_mean_stddev.cpp  sample_joint_dist.cpp  sample_std_normal.cpp
include/autoppl/: autoppl  autoppl.hpp  expr_builder.hpp  variable.hpp
include/autoppl/algorithm/: mh.hpp  nuts.hpp  sampler_tools.hpp
include/autoppl/distribution/: bernoulli.hpp  density.hpp  dist_expr.hpp  normal.hpp  uniform.hpp
include/autoppl/dummy/: fib.hpp
include/autoppl/expression/: activate.hpp  binop.hpp  core.hpp  dist_utils.hpp  expr_builder.hpp  model.hpp  model_expr.hpp  op_overloads.hpp  rv_tag.hpp  traits.hpp  uniform.hpp  var_expr.hpp  variable.hpp
include/autoppl/math/: autocorrelation.hpp  density.hpp  ess.hpp  math.hpp  smoothers.hpp  welford.hpp
include/autoppl/mcmc/: base_mcmc.hpp  config_base.hpp  mh.hpp  result.hpp  sampler_tools.hpp
include/autoppl/util/: concept.hpp  dist_expr_traits.hpp  functional.hpp  logging.hpp  model_expr_traits.hpp  traits.hpp  type_traits.hpp  value.hpp  var_expr_traits.hpp  var_traits.hpp
include/autoppl/utils/: traits.hpp
lib/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+84 more)
test/: CMakeLists.txt  ad_integration_unittest.cpp  expr_builder_unittest.cpp  test1.cpp
test/algorithm/: mh_regression_unittest.cpp  mh_unittest.cpp  nuts_unittest.cpp  sampler_tools_unittest.cpp
test/distribution/: bernoulli_unittest.cpp  discrete_unittest.cpp  normal_unittest.cpp  uniform_unittest.cpp
test/expression/: core_unittest.cpp  expr_builder_unittest.cpp  model_unittest.cpp  uniform_unittest.cpp
test/expression/constraint/: bounded_unittest.cpp  lower_unittest.cpp  pos_def_unittest.cpp
test/expression/distribution/: bernoulli_unittest.cpp  cauchy_unittest.cpp  density_unittest.cpp  discrete_unittest.cpp  dist_fixture_base.hpp  normal_unittest.cpp  uniform_unittest.cpp  wishart_unittest.cpp
test/expression/distribution/reference/: normal.py
test/expression/integration/: ad_inttest.cpp  dist_inttest.cpp  model_inttest.cpp
test/expression/integration/ref/: ad_ref.py
test/expression/model/: model_unittest.cpp
test/expression/samples/: dist_sample_unittest.cpp  model_sample_unittest.cpp
test/expression/variable/: binary_unittest.cpp  binop_unittest.cpp  constant_unittest.cpp  data_unittest.cpp  dot_unittest.cpp  for_each_unittest.cpp  glue_unittest.cpp  op_eq_unittest.cpp  param_unittest.cpp  sqrt_unittest.cpp  tparam_unittest.cpp  unary_unittest.cpp  variable_unittest.cpp  variable_viewer_unittest.cpp
test/math/: autocorrelation_unittest.cpp  density_unittest.cpp  ess_unittest.cpp  math_unittest.cpp  welford_unittest.cpp
test/mcmc/: mh_regression_unittest.cpp  mh_unittest.cpp  sampler_tools_unittest.cpp
test/mcmc/hmc/: hamiltonian_unittest.cpp  leapfrog_unittest.cpp  var_adapter_unittest.cpp
test/mcmc/hmc/nuts/: nuts_unittest.cpp
test/mcmc/hmc/nuts/ref/: nuts_wishart_cov_stan.py  nuts_wishart_cov_stan.stan  reference.py
test/testutil/: base_fixture.hpp  mock_types.hpp  sample_tools.hpp
test/util/: concept_unittest.cpp  dist_expr_traits_unittest.cpp  var_expr_traits_unittest.cpp  var_traits_unittest.cpp
test/util/ad_boost/: bounded_inv_transform_unittest.cpp  cov_inv_transform_unittest.cpp  lower_inv_transform_unittest.cpp
test/util/iterator/: counting_iterator_unittest.cpp  range_unittest.cpp
test/util/traits/: concept_unittest.cpp  dist_expr_traits_unittest.cpp  shape_traits_unittest.cpp  var_expr_traits_unittest.cpp  var_traits_unittest.cpp
tests/: CMakeLists.txt  test1.cpp
(+67 files in other folders)
